# file-buddy

./: .env.local.example  .gitignore  README.md  main.py  pyproject.toml
config/: greetings.py  policies.py  prompts.py  risk_assesment.py  security.py  security_config.py  settings.py
core/: audit.py  audit_logger.py  backup_manager.py  confirmation.py  context_manager.py  exceptions.py  health_monitor.py  intent_processor.py  memory_manager.py  memory_store.py  retry_handler.py  safety.py  snapshot.py  suggestion_engine.py
models/: tool_results.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  main.rs  security.rs  tray.rs
tests/: memory_integration.py  monitor_health.py  week1_features.py
tools/: create_tools.py  dangerous_tools.py  mutate_tools.py  organize_tools.py  read_tools.py  utility_tools.py
utils/: file_utils.py  logger.py  path_utils.py
